--- a/Profile.html
+++ b/Profile.html
@@ -30,7 +30,7 @@
             <a href="https://www.instagram.com/mpty96/">Instagram</a>        
         </ul>
         <ul>
-            <a href="https://github.com/mpty96">GitHub</a>
+            <a href="https://github.com/mpty96/Evaluacion1">GitHub</a>
         </ul>
     </section>
 
